objects/ASI_CRM_Promotion_Target__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GWP_Allocation__c</fullName>
        <label>GWP Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_No_of_Activities__c</fullName>
        <label>No. of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_HK_CRM_Promotion__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Channel Promotion, ASI TH CRM National</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Promotion Targets</relationshipLabel>
        <relationshipName>Promotion_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected user should be PRTH RSM</errorMessage>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>contains</operation>
                <value>ASI_TH_CRM_RSM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotion_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>North 2</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>CVS</fullName>
                </value>
                <value>
                    <fullName>HYPER</fullName>
                </value>
                <value>
                    <fullName>SUPER</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Unit__c</fullName>
        <label>Target Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Target__c</fullName>
        <label>Volume Target (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Promotion Target</label>
    <listViews>
        <fullName>ASI_CRM_TW_Promotion_Targets</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Promotion__c</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_Target_Unit__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Promotion_Target__c.ASI_CRM_TW_PromotionTarget</value>
        </filters>
        <label>TW Promotion Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Promotion Target Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Targets</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TH_PromotionTarget</fullName>
        <active>true</active>
        <label>TH Promotion Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_PromotionTarget</fullName>
        <active>true</active>
        <label>TW Promotion Target</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_TH_GWP_Promotion</fullName>
        <active>true</active>
        <description>For GWP Promotion, GWP Allocation must be input</description>
        <errorConditionFormula>AND( 
CONTAINS(TEXT(ASI_CRM_Promotion__r.ASI_CRM_Type__c),&quot;GWP&quot;)
, ISNULL(ASI_CRM_GWP_Allocation__c)
)</errorConditionFormula>
        <errorMessage>Please fill in GWP Allocation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_TH_TastingOREvent_Promotion</fullName>
        <active>true</active>
        <description>For Tasting/Event Promotion, Volume Target	and No. Activities must be input</description>
        <errorConditionFormula>AND(
OR(
CONTAINS(TEXT(ASI_CRM_Promotion__r.ASI_CRM_Type__c),&quot;Tasting&quot;),
CONTAINS(TEXT(ASI_CRM_Promotion__r.ASI_CRM_Type__c),&quot;Event&quot;)
),
OR(
ISNULL(ASI_CRM_Volume_Target__c), 
ISNULL(ASI_CRM_No_of_Activities__c)
)
)</errorConditionFormula>
        <errorMessage>Please fill in Volume Target and No. Activities.</errorMessage>
    </validationRules>
</CustomObject>